# hse-scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt
.env/: pyvenv.cfg
data/: .~lock.joined.csv#  final-delphi-master.csv  final-delphi.csv  joined.csv
notebooks/: master_data_catalogue.ipynb
scripts/: __init__.py  csv_utils.py  mapping.py  namespace.py
scripts/Data-Entry/: Dataset - VBA Macro.txt  Indicator - VBA Macro.txt  OAHP_DataCatalogueSchemaProposal -v05.12.xlsx - Datasets (Data Entry).xlsm  OAHP_DataCatalogueSchemaProposal -v05.12.xlsx - Indicators (Data Entry).xlsm
scripts/hse2ucd/: config.py  load_mapping_rules.py  load_process_files.py  process.py
scripts/pipeline/: add_columns.py  add_subheaders.py  data_join.py  re_order.py
scripts/rdf_mapping/: create_csv.py  create_subject_csv.py  csv_rdf_convert.py  map_to_rdf.py
scripts/validate/: csv_validate.py
sparql/: datasets_transfer.rq  dpv_transfer.rq  general_transfer.rq  run_query.py  temporal_query.rq
sparql/comleteness/: check_properties.rq  datasets_with_mandatory_properties.rq
sparql/completeness/: 1.5_no_datasets_with_data_ireland.rq  1.5_no_with_data_ireland.rq  indicators_>=65.rq  indicators_with_mandatory_properties.rq  indicators_without_mandatory_properties.rq  print_all_indicators_that_have_properties.rq  print_all_indicators_without_props.rq
sparql/data_protection/: 4.1_indicators_personal_data_access_rights.rq  4.3_indicators_hse_uncontrolled_data.rq
sparql/granularity/: 2_indicators_spatial_resolution.rq  2_indicators_with_mini_temporal.rq  (+1 more)
(+2 files in other folders)
